# test_game

./: CMakeLists.txt
ClassWithException/: Texture2D.cpp  Texture2D.h
res/shaders/: backgroundFragment.txt  backgroundVertex.txt  fSprite.txt  fragmentShader.txt  vSprite.txt  vertexShader.txt
src/: sdl_windows_main.cpp
src/Physics/: PhysicsManager.cpp  PhysicsManager.h
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  ElementBuffer.cpp  ElementBuffer.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Resource/: Game.cpp  Game.h  Hero.cpp  Hero.h  background.cpp  background.h
